# markview

./: .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE  Makefile  README.md  RELEASE_NOTES.md  ROADMAP.md  code-reviewer.md
.github/workflows/: ci.yml  release.yml
packaging/macos/: Info.plist  Markview.icns.base64  bundle.sh  package.sh
src/: lib.rs  main.rs
tests/: ci.rs  cli.rs  packaging.rs
