[package]
name = "markview"
version = "0.1.0"
edition = "2021"
description = "A lightweight Markdown viewer with pluggable frontends"
license = "MIT"

[features]
default = []
gui = ["dep:tao", "dep:wry"]

[dependencies]
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }
tao = { version = "0.35", optional = true }
wry = { version = "0.55", optional = true }

[[bin]]
name = "markview"
path = "src/main.rs"

[[bin]]
name = "markview-gui"
path = "src/bin/markview-gui.rs"
required-features = ["gui"]

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
