[package]
name = "markview"
version = "0.1.0"
edition = "2021"
description = "A lightweight Markdown viewer with pluggable frontends"
license = "MIT"

[features]
default = []
gui = [
    "dep:libc",
    "dep:notify",
    "dep:objc2",
    "dep:objc2-app-kit",
    "dep:objc2-foundation",
    "dep:rfd",
    "dep:tao",
    "dep:url",
    "dep:wry",
]
highlight = []

[dependencies]
libc = { version = "0.2", optional = true }
notify = { version = "8", optional = true }
objc2 = { version = "0.6", optional = true }
objc2-app-kit = { version = "0.3", default-features = false, features = ["NSApplication", "NSEvent", "NSMenu", "NSMenuItem"], optional = true }
objc2-foundation = { version = "0.3", default-features = false, features = ["NSObject", "NSString"], optional = true }
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }
rfd = { version = "0.15", optional = true }
tao = { version = "0.35", optional = true }
url = { version = "2", optional = true }
wry = { version = "0.55", optional = true }

[[bin]]
name = "markview"
path = "src/main.rs"

[[bin]]
name = "markview-gui"
path = "src/bin/markview-gui.rs"
required-features = ["gui"]

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
